Next publish push (#1082)

--- a/toc.yaml
+++ b/toc.yaml
@@ -380,7 +380,7 @@ toc:
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-db2-rhel-overview.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-db2-rhel-deploy.md
-                      - navtitle: Backup
+                      - navtitle: Snapshot Backup
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-db2-rhel-backup.md
                 - topicgroup:
                     label: SAP NetWeaver with ASE
@@ -390,7 +390,7 @@ toc:
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-ase-sybase-overview.md
                       - navtitle: Deploying
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-ase-sybase-deploy.md
-                      - navtitle: Backup
+                      - navtitle: Snapshot Backup
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-ase-sybase-backup.md
                 - topicgroup:
                     label: SAP Reference architectures
