--- a/toc.yaml
+++ b/toc.yaml
@@ -399,9 +399,9 @@ toc:
                     id: "sap-workloads-in-vpc-sap-ref-arch"
                     topics:
                       - navtitle: SAP S/4HANA HA
-                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-s4hana-ha-config.md
-                      - navtitle: SAP NetWeaver 7.x HA
-                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-hana-ha-config.md
+                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-s4hana-ha-config-ref.md
+                      - navtitle: SAP NetWeaver 7.x with HANA HA
+                        topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-hana-ha-config-ref.md
           - topicgroup:
               label: High availability scenarios on Power Virtual Server
               id: "sap-ha-scenarios-on-power-virtual-server"
