--- a/toc.yaml
+++ b/toc.yaml
@@ -400,7 +400,7 @@ toc:
                     topics:
                       - navtitle: SAP S/4HANA HA
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-s4hana-ha-config-ref.md
-                      - navtitle: SAP NetWeaver 7.x with HANA HA
+                      - navtitle: SAP NetWeaver 7.x on HANA with HA
                         topic: howto/vpc-intel-vsi/intel-vsi-sap-workloads-nw-hana-ha-config-ref.md
           - topicgroup:
               label: High availability scenarios on Power Virtual Server
