--- a/toc.yaml
+++ b/toc.yaml
@@ -457,7 +457,7 @@ toc:
               topics:
               - navtitle: Implementing a basic cluster
                 topic: howto/powervs/powervs-ha-rhel.md
-              - navtitle: Implementing a basic cluster in a multizone region environment
+              - navtitle: Implementing a basic cluster in a multizone region
                 topic: howto/powervs/powervs-ha-rhel-mz.md
               - navtitle: Configuring SAP HANA scale-up system replication
                 topic: howto/powervs/powervs-ha-rhel-hana-sr.md
@@ -473,16 +473,16 @@ toc:
                 topic: howto/powervs/powervs-ha-rhel-hana-sr-multitarget.md
               - navtitle: Configuring SAP S/4HANA (ASCS and ERS)
                 topic: howto/powervs/powervs-ha-rhel-ensa.md
-              - navtitle: Configuring SAP S/4HANA (ASCS and ERS) in a multizone region environment
+              - navtitle: Configuring SAP S/4HANA (ASCS and ERS) in a multizone region
                 topic: howto/powervs/powervs-ha-rhel-ensa-mz.md
               - navtitle: Configuring SAP S/4HANA (ASCS and ERS) in a multizone region with simple mount
                 topic: howto/powervs/powervs-ha-rhel-ensa-sm-mz.md
+              - navtitle: Configuring and manual failover PowerVS Multi-Zone Overlay IP (non-pacemaker)
+                topic: howto/powervs/powervs-ha-rhel-ovl-ip-manual.md
               - navtitle: Configuring an active-passive NFS server
                 topic: howto/powervs/powervs-ha-rhel-nfs.md
               - navtitle: Implementing SBD poison-pill fencing
                 topic: howto/powervs/powervs-ha-rhel-sbd.md
-              - navtitle: Configuring and manual failover PowerVS Multi-Zone Overlay IP (non-pacemaker)
-                topic: howto/powervs/powervs-ha-rhel-ovl-ip-manual.md
           - topicgroup:
               label: Implementing SLES HA Cluster Extension for SAP solutions
               id: "sap-ha-scenarios-on-power-virtual-server-with-sles"
